--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask = "*"
 sqlalchemy = "*"
 e1839a8 = {editable = true,path = "."}
 webshop = {editable = true,path = "."}
+sqlalchemy-utils = "*"
 
 [requires]
 python_version = "3.8"
